# transposonaligner

./: .gitignore  Dockerfile  MANIFEST.in  README.md  alignedfeature.py  blastn.py  cli.py  genome.py  insertion.py  macos_sickle.py  main.py  printer.py  pyproject.toml  records.py  sequences.py  testrun.sh
data/: 21BDRAA001_A01_premix.fasta  21BDRAA001_A02_premix.fasta  21BDRAA001_A03_premix.fasta  21BDRAA001_A08_premix.fasta  21BDRAA001_A09_premix.fasta  21BDRAA001_A10_premix.fasta  21BDRAA001_A11_premix.fasta  21BDRAA001_A12_premix.fasta  21BDRAA001_B01_premix.fasta  21BDRAA001_B02_premix.fasta  21BDRAA001_B03_premix.fasta  21BDRAA001_B08_premix.fasta  21BDRAA001_B09_premix.fasta  21BDRAA001_B10_premix.fasta  21BDRAA001_B11_premix.fasta  21BDRAA001_B12_premix.fasta  21BDRAA001_C01_premix.fasta  21BDRAA001_C02_premix.fasta  21BDRAA001_C03_premix.fasta  21BDRAA001_C08_premix.fasta  21BDRAA001_C09_premix.fasta  21BDRAA001_C10_premix.fasta  21BDRAA001_C11_premix.fasta  21BDRAA001_C12_premix.fasta  21BDRAA001_D01_premix.fasta  21BDRAA001_D02_premix.fasta  21BDRAA001_D03_premix.fasta  21BDRAA001_D08_premix.fasta  21BDRAA001_D09_premix.fasta  21BDRAA001_D10_premix.fasta  21BDRAA001_D11_premix.fasta  21BDRAA001_D12_premix.fasta  21BDRAA001_E01_premix.fasta  21BDRAA001_E02_premix.fasta  21BDRAA001_E08_premix.fasta  21BDRAA001_E09_premix.fasta  21BDRAA001_E10_premix.fasta  21BDRAA001_E11_premix.fasta  21BDRAA001_E12_premix.fasta  21BDRAA001_F01_premix.fasta  (+26 more)
data/results/: H220929-053_A01_21BDRAA001_A01_premix.ab1.processed.gb  (+158 more)
src/tnatlas/: config.py  meta.py
(+9 files in other folders)
